fix securitycomfig